labs/module1_session3_api_design/step4_product_api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: product-proxy
  name: product-api
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 80
  selector:
    io.kompose.service: product-api
  type: LoadBalancer
# status:
#   loadBalancer: {}
