labs/module1_session3_api_design/step4_product_api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  # annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /product/v1/status
        pathType: Exact
        backend:
          service:
            name: product-api
            port: 
              number: 9090
